--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-svg": "^14.1.12",
+    "svg": "^0.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
